[workspace]
members = [
    "crates/loro",
    "crates/examples",
    "crates/bench-utils",
    "crates/rle",
    "crates/loro-common",
    "crates/loro-internal",
    "crates/loro-wasm",
    "crates/fuzz",
    "crates/dev-utils",
    "crates/delta",
    "crates/loro-python"
]
resolver = "2"

[workspace.dependencies]
enum_dispatch = "0.3.11"
enum-as-inner = "0.5.1"
fxhash = "0.2.1"
serde_columnar = { version = "0.3.4" }
